# MCP-Project

./: README.md  pyproject.toml
src/: index.ts
src/config/: env.ts  featureFlags.ts
src/prompts/: index.ts  summarizePrompt.ts  triagePrompt.ts
src/resources/: docsConfig.ts  docsResource.ts
src/schemas/: common.ts
src/server/: createServer.ts  lifeCycle.ts  registerPrompts.ts  registerResources.ts
src/servers/: registerPrompts.ts  registerResources.ts  registerTools.ts
src/shared/: errors.ts
src/tools/getTicket/: tools.ts
src/tools/search/: index.ts  schema.ts  tool.ts
src/transports/: auth.ts  http.ts
